Fixed heading space issue on mobile

--- a/assets/scss/mobile.scss
+++ b/assets/scss/mobile.scss
@@ -110,7 +110,11 @@
     }
 
     article.article {
-      width: 100%
+      width: 100%;
+
+      h1 {
+        margin-top: -2px;
+      }
     }
   }
 }
